--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
    
 </head>
 <body>
+    <div class="container">
+      <div class="Main"></div>
+      <div class="titulo"></div>
+      <div class="Img1"></div>
+      <div class="Img2"></div>
+      <div class="Img3"></div>
+      <div class="Img4"></div>
+      <div class="aside1"></div>
+      <div class="footer"></div>
+      <div class="logo"></div>
+    </div>
+
+
+
+    
     <header>
        
           <div class="titulo">
